--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "api": "json-server --watch db.json --port 3001"
+  },
+  "devDependencies": {
+    "json-server": "^1.0.0-beta.3"
   }
 }
