--- a/package.json
+++ b/package.json
@@ -20,5 +20,17 @@
   },
   "devDependencies": {
     "json-server": "^1.0.0-beta.3"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
